# notifications_sprint_1

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml  requirements.txt
Film Application/: .c4builder  readme.md
auth-service/: .gitignore
auth_service/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  migration.sh  requirements.txt
bookmarks_service/: Dockerfile  docker-entrypoint.sh  requirements.txt
django_admin/: .gitignore  Dockerfile
elastic/: Dockerfile
envs/: .env.api.auth  .env.api.auth.example  .env.api.auth.k8s  .env.api.films  .env.api.films.k8s  .env.api.ucg  .env.api.ucg.k8s  .env.api.url_shortener  .env.api.url_shortener.k8s  .env.bookmarks.api  .env.bookmarks.api.k8s  .env.database  .env.database.auth  .env.database.links  .env.django  (+24 more)
notifications_admin/: Dockerfile  Makefile  pyproject.toml  requirements.txt
notifications_admin/app/: docker-entrypoint.sh
notifications_admin/app/config/: settings.py  urls.py
notifications_admin/app/config/components/: apps.py  auth.py  database.py  internationalization.py  middlewares.py
notifications_admin/app/notify/: admin.py  backends.py  models.py  user.py
notifications_admin/app/notify/grpc/: managers_pb2.py  managers_pb2_grpc.py  utils.py
notifications_admin/app/notify/migrations/: 0001_initial.py  0002_add_last_notified_field.py
notifications_admin/app/notify/models/: __init__.py  enums.py  mixins.py  notification.py  user.py
notifications_admin/app/uwsgi/: uwsgi.ini  uwsgi_dev.ini
(+527 files in other folders)
